# shogi-format-rs

./: Cargo.toml
src/: formats.rs  lib.rs  score.rs
src/formats/: csa.rs  jkf.rs  kif.rs
src/score/: board.rs  branch.rs  color.rs  moves.rs  piece.rs  square.rs  tree.rs
