[package]
name = "shogi-format"
version = "0.1.0"
authors = ["masinc <masinc000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
regex = "1"
chrono = {version = "0.4", features = ["serde"]}
